--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,7 +2,7 @@
 FROM node:18-alpine AS deps
 WORKDIR /app
 COPY package.json ./
-RUN npm ci
+RUN npm install
 
 # Stage 2: Build the app
 FROM node:18-alpine AS builder
