--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,20 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
+  # Main SPA route handling
   location / {
     try_files $uri /index.html;
   }
+
+  # Static assets caching
+  location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg)$ {
+    expires 7d;
+    add_header Cache-Control "public, max-age=604800, immutable";
+    try_files $uri =404;
+  }
+
+  # Enable gzip for text-based assets
+  gzip on;
+  gzip_types text/plain text/css application/javascript application/json application/xml+rss;
+  gzip_min_length 1024;
 }
